Rework how building works.

--- a/Makefile.gmloader
+++ b/Makefile.gmloader
@@ -1,22 +1,33 @@
 ARCH?=aarch64-linux-gnu
-CC=${ARCH}-gcc
-CXX=${ARCH}-g++
-LD=${ARCH}-ld
-PKG_CONFIG=${ARCH}-pkg-config
+CC?=${ARCH}-gcc
+CXX?=${ARCH}-g++
+LD?=${ARCH}-ld
+PKG_CONFIG?=${ARCH}-pkg-config
 
 LIBS=\
 	-pthread \
 	-lm \
+	-lrt \
 	$(shell ${PKG_CONFIG} sdl2 --libs) \
 	$(shell ${PKG_CONFIG} openal --libs) \
 	$(shell ${PKG_CONFIG} zlib --libs) \
 	$(shell ${PKG_CONFIG} libzip --libs)
 
-OPTM?=-Os -flto
+# General compilation flags
+OPTM?=-Os
 COMMONFLAGS=-Wno-strict-aliasing -Werror=return-type -I. -I./thunks/ -I./loader/ -I./gmloader/ -I./build/${ARCH}/thunks/libc -I./jni/ ${OPTM} -MMD
 CFLAGS=$(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
-CXXFLAGS=-std=gnu++2a -fuse-cxa-atexit -fno-exceptions -fno-rtti $(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
+CXXFLAGS=-std=gnu++2a -fuse-cxa-atexit $(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
 LDFLAGS=-L3rdparty/libbsd/src/.libs ${OPTM}
+
+# General pre-processing flags
+LLVM_FILE?=
+LLVM_INC?=/usr/${ARCH}/include
+GENERATE?=--llvm-includes ${LLVM_INC}
+
+ifneq (${LLVM_FILE},)
+	GENERATE+=--llvm-library-file "${LLVM_FILE}"
+endif
 
 # Used by generate_libc.py to generate the function tables that are exported to the
 # application.
@@ -41,15 +52,8 @@ OBJ=$(patsubst build/%,build/${ARCH}/%,${GENERIC_OBJ})
 
 all: build/${ARCH}/gmloader/gmloader
 
-cross-all:
-	$(MAKE) -f Makefile.gmloader ARCH=aarch64-linux-gnu 
-	$(MAKE) -f Makefile.gmloader ARCH=arm-linux-gnueabihf
-
 clean:
 	rm -rf build/${ARCH}
-
-clean-all:
-	rm -rf build/
 
 -include 3rdparty/libbsd.mk
 
@@ -68,7 +72,7 @@ build/${ARCH}/%.cpp.o: %.cpp
 # The generated headers depend on the libc sources
 ${LIBC_TABS} &: ${LIBC_SRCS} thunks/libc/symtab thunks/libc/symtab_exclude thunks/libc/c_prototypes.h thunks/libc/common.hpp
 	@mkdir -p $(@D)
-	python3 scripts/generate_libc.py ${ARCH}
+	python3 scripts/generate_libc.py ${ARCH} ${GENERATE}
 
 # Include all build dependencies too
 -include $(OBJ:%.o=%.d)
