--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdparty/libmd"]
 	path = 3rdparty/libmd
 	url = https://gitlab.freedesktop.org/libbsd/libmd
+[submodule "3rdparty/json"]
+	path = 3rdparty/json
+	url = https://github.com/nlohmann/json.git
