--- a/Makefile.gmloader
+++ b/Makefile.gmloader
@@ -7,7 +7,7 @@ PKG_CONFIG := ${CROSS}pkg-config
 
 BUILD_DATE = $(shell date +"%Y%m%d_%H%M%S")
 GIT_HASH = $(shell git rev-parse HEAD)
-GIT_BRANCH = $(shell git branch --show-current)
+GIT_BRANCH = $(shell git branch --show-current | tr '-' '_')
 
 DEVICE_ARCH = aarch64
 
