--- a/Makefile.gmloader
+++ b/Makefile.gmloader
@@ -6,8 +6,8 @@ LD := ${CROSS}ld
 PKG_CONFIG := ${CROSS}pkg-config
 
 BUILD_DATE = $(shell date +"%Y%m%d_%H%M%S")
-GIT_HASH = $(shell git rev-parse HEAD)
-GIT_BRANCH = $(shell git branch --show-current | tr '-' '_')
+GIT_BRANCH = ${GITHUB_REF_NAME}
+GIT_BRANCH_FRIENDLY = $(subst -,_,$(GIT_BRANCH))
 
 DEVICE_ARCH = aarch64
 
@@ -28,7 +28,7 @@ OPTM?=-Os
 COMMONFLAGS=-Wno-strict-aliasing -Werror=return-type -I. -I./thunks/ -I./loader/ -I./gmloader/ -I./build/${ARCH}/thunks/libc -I./jni/ -I./3rdparty/json/include ${OPTM} -MMD
 CFLAGS=$(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
 CXXFLAGS=-std=gnu++2a -fuse-cxa-atexit $(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
-LDFLAGS=-L3rdparty/libbsd/src/.libs ${OPTM} -Wl,--defsym,BUILD_DATE_$(BUILD_DATE)=0 -Wl,--defsym,GIT_HASH_$(GIT_HASH)=0 -Wl,--defsym,GIT_BRANCH_$(GIT_BRANCH)=0
+LDFLAGS=-L3rdparty/libbsd/src/.libs ${OPTM} -Wl,--defsym,BUILD_DATE_$(BUILD_DATE)=0 -Wl,--defsym,GIT_HASH_$(GITHUB_SHA)=0 -Wl,--defsym,GIT_BRANCH_$(GIT_BRANCH_FRIENDLY)=0
 
 # General pre-processing flags
 LLVM_FILE?=
