--- a/gmloader.conf.example
+++ b/gmloader.conf.example
@@ -3,5 +3,5 @@
     "apk_path" : "my_game.apk",
     "show_cursor" : false,
     "disable_controller" : false,
-    "force_platform" : "os_wind0ws"
+    "force_platform" : "os_windows"
 }
