Implement a Pizza Tower compatible FMOD extension. Thanks @RegularCharacter07 and @cdeletre for the FMOD function list!

--- a/Makefile.gmloader
+++ b/Makefile.gmloader
@@ -39,6 +39,19 @@ ifneq (${LLVM_FILE},)
 	GENERATE+=--llvm-library-file "${LLVM_FILE}"
 endif
 
+ifeq (${DEVICE_ARCH},aarch64)
+	FMOD_ARCH=arm64
+else ifeq (${DEVICE_ARCH},armhf)
+	FMOD_ARCH=armhf
+endif
+
+ifeq (${USE_FMOD},1)
+	CFLAGS+=-DUSE_FMOD=1 -I./3rdparty/fmod/api/core/inc -I./3rdparty/fmod/api/studio/inc
+	CXXFLAGS+=-DUSE_FMOD=1 -I./3rdparty/fmod/api/core/inc -I./3rdparty/fmod/api/studio/inc
+
+	LIBS+=-L./3rdparty/fmod/api/core/lib/${FMOD_ARCH} -L./3rdparty/fmod/api/studio/lib/${FMOD_ARCH} -lfmod -lfmodstudio
+endif
+
 # Used by generate_libc.py to generate the function tables that are exported to the
 # application.
 LIBC_SRCS=$(filter-out $(if ${exclude_file1},,thunks/libc/libc_table.cpp),$(wildcard thunks/libc/*.cpp))
