Use FMOD_SDL as a Core plugin. Fixes failure to initialize audio on h700.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "3rdparty/libzip"]
 	path = 3rdparty/libzip
 	url = https://github.com/nih-at/libzip
+[submodule "3rdparty/FMOD_SDL"]
+	path = 3rdparty/FMOD_SDL
+	url = https://github.com/flibitijibibo/FMOD_SDL
