--- a/Makefile.gmloader
+++ b/Makefile.gmloader
@@ -19,12 +19,13 @@ LIBS:=\
 	-pthread \
 	-lm \
 	-lrt \
+	-ldl \
 	$(shell ${PKG_CONFIG} sdl2 --libs) \
 	$(shell ${PKG_CONFIG} zlib --libs)
 
 # General compilation flags
 OPTM?=-Os
-COMMONFLAGS:=-Wno-strict-aliasing -Werror=return-type -I. -I./thunks/ -I./loader/ -I./gmloader/ -I./build/${ARCH}/thunks/libc -I./jni/ -I./3rdparty/json/include -I./3rdparty/stb ${OPTM} -MMD
+COMMONFLAGS:=-Wno-strict-aliasing -Werror=return-type -I. -I./thunks/ -I./loader/ -I./gmloader/ -I./build/${ARCH}/thunks/libc -I./jni/ -I./3rdparty/json/include -I./3rdparty/stb -I./3rdparty/lua ${OPTM} -MMD
 CFLAGS:=$(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
 CXXFLAGS:=-std=gnu++2a -fuse-cxa-atexit $(shell ${PKG_CONFIG} sdl2 --cflags) ${COMMONFLAGS}
 LDFLAGS:=${OPTM} -Wl,--gc-sections -Wl,--defsym,BUILD_DATE_$(BUILD_DATE)=0 -Wl,--defsym,GIT_HASH_$(GITHUB_SHA)=0 -Wl,--defsym,GIT_BRANCH_$(GIT_BRANCH_FRIENDLY)=0
@@ -78,14 +79,15 @@ all: build/${ARCH}/gmloader/gmloadernext.${DEVICE_ARCH}
 clean:
 	rm -rf build/${ARCH}
 
-# Include libbsd/libmd and their relevant flags
+# Include subprojects for 3rdparty libraries and their relevant flags
 -include 3rdparty/libbsd.mk
 -include 3rdparty/libzip.mk
+-include 3rdparty/lua.mk
 
 # By repeating the generated headers on this rule, we force them to start building
 # as soon as possible, so libc_table.cpp isn't waiting forever.
-build/${ARCH}/gmloader/gmloadernext.${DEVICE_ARCH}: ${LIBC_TABS} $(BSD_OBJ) $(ZIP_OBJ) $(FMODSDL_OBJ) $(OBJ)
-	$(CXX) $(LDFLAGS) -o $@ $(OBJ) $(ZIP_OBJ) $(FMODSDL_OBJ) $(BSD_OBJ) $(LIBS)
+build/${ARCH}/gmloader/gmloadernext.${DEVICE_ARCH}: ${LIBC_TABS} $(BSD_OBJ) $(LUA_OBJ) $(ZIP_OBJ) $(FMODSDL_OBJ) $(OBJ)
+	$(CXX) $(LDFLAGS) -o $@ $(OBJ) $(LUA_OBJ) $(ZIP_OBJ) $(FMODSDL_OBJ) $(BSD_OBJ) $(LIBS)
 
 build/${ARCH}/%.cpp.o: %.cpp
 	@mkdir -p $(@D)
